--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,3 +4,10 @@ build:
   os: "ubuntu-20.04"
   tools:
     python: "3.10"
+
+sphinx:
+   configuration: docs/conf.py
+
+python:
+   install:
+   - requirements: docs/requirements.txt
