--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiogram=2.24
-psycopg2-binary=2.9.5
-requests=2.28.1
-yadisk=1.2.16
+aiogram==2.24
+psycopg2-binary==2.9.5
+requests==2.28.1
+yadisk==1.2.16
